Minor spacing fix

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ nav ul li a:hover::after{
 }
 
 #about-me .text {
-    padding: 0 20px;
+    padding: 0 5%;
 }
 
 #about-me h1 {
